config/dependencies/structure